--- a/usage/templates/usage.html
+++ b/usage/templates/usage.html
@@ -6,9 +6,19 @@
     <div class="container content">
         <h1 class="sub-header">Usage Statistics</h1>
         {% now "Y" as current_year %}
-        <a class="note" href='{% url "usage:usage_download" %}'>Download Users for the Academic Year
-            {{current_year|add:-1}}-{{current_year}}</a>
-        <hr class="main-no-margin-top"/>
+        <a class="btn btn-primary btn-xs" href='{% url "usage:usage_download" %}'>Download Users for the Academic Year
+            {{current_year|add:-1}}-{{current_year}}
+            <span class="badge">
+                {{usersCount}}
+            </span>
+        </a>
+        <p class="btn btn-primary btn-xs">Unique Students Viewed for the Academic Year
+            {{current_year|add:-1}}-{{current_year}}
+            <span class="badge">
+                {{studentsCount}}
+            </span>
+        </p>
+        <hr/>
 
         <script>
             function getDateOfISOWeek(w, y) {
