Add margin to count fields

--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -135,6 +135,9 @@ h4 {
     display: inline-block;
     margin-left: $secondary-margin;
 }
+.count-data {
+    margin-top: $secondary-margin;
+}
 .center-align {
     text-align: center;
 }
