--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -58,6 +58,11 @@
                                                 {{user.last_name}}</strong>
                                         </p>
                                     </li>
+                                    {% if user.is_superuser %}
+                                        <li>
+                                            <a href="/admin">Admin</a>
+                                        </li>
+                                    {% endif %}
                                     <li role="separator" class="divider"></li>
                                     <li>
                                         <a href="{% url 'auth_logout' %}">Logout</a>
