Use admin:index for link url

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -60,7 +60,7 @@
                                     </li>
                                     {% if user.is_superuser %}
                                         <li>
-                                            <a href="/admin">Admin</a>
+                                            <a href="{% url 'admin:index' %}">Admin</a>
                                         </li>
                                     {% endif %}
                                     <li role="separator" class="divider"></li>
