Amend font mixin and color of student detail

--- a/seumich/static/seumich/styles/_sefont.scss
+++ b/seumich/static/seumich/styles/_sefont.scss
@@ -1,13 +1,12 @@
 $font_student_explorer_wordmark: Lato 18px rgb(229, 229, 229);
 $font_Lato: Lato;
 $font_Helvetica: Helvetica;
-//format: size, color(optional), weight(optional)
-$font_links_lists: 14px, rgb(48, 114, 171);
-$font_advisor_h1: 36px, rgb(165, 42, 42);
-$font_advisor_h2: 24px, rgb(51, 51, 51);
-$font_student_h1: 28px, rgb(255, 255, 255), 400;
-$font_student_h2: 24px, rgb(255, 255, 255), 500;
-$font_student_h3: 24px, rgb(51, 51, 51), 500;
-$font_student_h4: 20px, rgb(51, 51, 51), 500;
-$font_student_course_list: 18px, rgb(44, 113, 173), 500;
-$font_student_email_uniquename: 14px, rgb(255, 255, 255);
+$font_links_lists: (size: 14px, color: rgb(48, 114, 171));
+$font_advisor_h1: (size: 36px, color: rgb(165, 42, 42));
+$font_advisor_h2: (size: 24px, color: rgb(51, 51, 51));
+$font_student_h1: (size: 28px, color: rgb(255, 255, 255), weight: 400);
+$font_student_h2: (size: 24px, color: rgb(255, 255, 255), weight: 500);
+$font_student_h3: (size: 24px, color: rgb(51, 51, 51), weight: 500);
+$font_student_h4: (size: 20px, color: rgb(51, 51, 51), weight: 500);
+$font_student_course_list: (size: 18px, color: rgb(44, 113, 173), weight: 500);
+$font_student_email_uniquename: (size: 14px, color: rgb(255, 255, 255), weight: 300);
