--- a/seumich/static/seumich/styles/_semixins.scss
+++ b/seumich/static/seumich/styles/_semixins.scss
@@ -34,7 +34,7 @@ $chart-width: 1150px;
         @content;
     }
 }
-@mixin font ($size, $color: null, $weight: null) {
+@mixin font ($size: null, $color: null, $weight: null) {
     font-size: $size;
     color: $color;
     font-weight: $weight;
