Fix hamburger icon color

--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -791,7 +791,7 @@ svg text {
 
 @media screen and (max-width: 992px) {
   .navbar-inverse .navbar-toggle .icon-bar {
-    background-color: #cccccc;
+    background-color: gray;
   }
 }
 
