--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -620,7 +620,7 @@ svg {
         }
         .icon-bar {
             @include mobile {
-                background-color: $color_active_gray;
+                background-color: gray;
             }
         }
     }
