--- a/seumich/static/seumich/styles/_sefont.scss
+++ b/seumich/static/seumich/styles/_sefont.scss
@@ -6,5 +6,5 @@ $font_student_h2: (size: 24px, color: rgb(255, 255, 255), weight: 500);
 $font_student_h3: (size: 24px, color: rgb(51, 51, 51), weight: 500);
 $font_student_h4: (size: 20px, color: rgb(51, 51, 51), weight: 500);
 $font_student_course_list: (size: 18px, color: rgb(44, 113, 173), weight: 500);
-$font_student_course_list_menu: (size: 18px, color: rgb(28,49,68));
+$font_student_course_list_menu: (size: 18px, color: rgb(28, 49, 68));
 $font_student_email_uniquename: (size: 14px, color: rgb(255, 255, 255), weight: 300);
