--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -1,10 +1,19 @@
 {% extends 'student_explorer/index.html' %}
 
 {% block content %}
+    <style>
+        .management {
+            margin: 15px;
+        }
+        .management h2 {
+            padding: 0;
+            margin: 0 0 10px 0;
+        }
+    </style>
     <div class="container content">
-        <div class="well well-lg">
+        <div class="well well-lg management">
 
-            <h2>Management</h2>
+            <a href="{% url 'management:index' %}"><h2>Student Explorer Management</h2></a>
 
             {% block management %}{% endblock %}
         </div>
