--- a/management/templates/management/index.html
+++ b/management/templates/management/index.html
@@ -1,5 +1,8 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-asd
+<ul>
+    <li><a href="{% url 'management:cohort_list' %}">Cohorts</a></li>
+    <li><a href="{% url 'management:user_list' %}">Users</a></li>
+</ul>
 {% endblock %}
