Refactor url names

--- a/management/templates/management/index.html
+++ b/management/templates/management/index.html
@@ -2,7 +2,7 @@
 
 {% block management %}
 <ul>
-    <li><a href="{% url 'management:cohort_list' %}">Cohorts</a></li>
-    <li><a href="{% url 'management:user_list' %}">Users</a></li>
+    <li><a href="{% url 'management:cohort-list' %}">Cohorts</a></li>
+    <li><a href="{% url 'management:user-list' %}">Users</a></li>
 </ul>
 {% endblock %}
