--- a/management/templates/management/user_list.html
+++ b/management/templates/management/user_list.html
@@ -16,6 +16,7 @@
                         <td>{{ user.first_name }}</td>
                         <td>{{ user.last_name }}</td>
                         <td>
+                            <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">lookup</a>
                             <a href="">deactiveate</a>
                         </td>
                     </tr>
