--- a/management/templates/management/user_list.html
+++ b/management/templates/management/user_list.html
@@ -17,7 +17,7 @@
                         <td>{{ user.last_name }}</td>
                         <td>
                             <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">lookup</a>
-                            <a href="">deactiveate</a>
+                            <a href="">deactivate</a>
                         </td>
                     </tr>
                     {% empty %}
