--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -1,27 +1,34 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <table>
+    <table class="table table-bordered">
         <thead>
-            <th>Code</th>
-            <th>Description</th>
-            <th></th>
+            <tr>
+                <th>Code</th>
+                <th>Description</th>
+                <th>Group</th>
+                <th>Action</th>
+            </tr>
         </thead>
         <tbody>
             {% for cohort in object_list %}
                 <tr>
                     <td>{{ cohort.code }}</td>
                     <td>{{ cohort.description }}</td>
+                    <td>{{ cohort.group }}</td>
                     <td>
                         <a href="">deactivate</a>
                     </td>
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="2">none found</td>
+                    <td colspan="2">None Found</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-    <a href="{% url 'management:add-cohort' %}">Add Cohort</a>
+    <a href="{% url 'management:add-cohort' %}" class="btn btn-info">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+        Add Cohort
+    </a>
 {% endblock %}
