--- a/management/templates/management/user_list.html
+++ b/management/templates/management/user_list.html
@@ -1,30 +1,32 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <table>
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>Username</th>
                 <th>First name</th>
                 <th>Last name</th>
-                <th></tr>
-            </thead>
-            <tbody>
-                {% for user in object_list %}
-                    <tr>
-                        <td>{{ user.username }}</td>
-                        <td>{{ user.first_name }}</td>
-                        <td>{{ user.last_name }}</td>
-                        <td>
-                            <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">lookup</a>
-                            <a href="">deactivate</a>
-                        </td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="3">none found</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% endblock %}
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in object_list %}
+                <tr>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.first_name }}</td>
+                    <td>{{ user.last_name }}</td>
+                    <td>
+                        <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">lookup</a>
+                        |
+                        <a href="">deactivate</a>
+                    </td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="3">None Found</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
