--- a/management/templates/management/add_cohort.html
+++ b/management/templates/management/add_cohort.html
@@ -20,7 +20,7 @@
                 {{ field }}
             </div>
         {% endfor %}
-        <input type="submit" class="btn btn-success" value="Add Cohort"/>
+        <input type="submit" class="btn btn-success" value="Submit"/>
     </form>
 
 {% endblock %}
