Add pagination to user and cohort list

--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -36,4 +36,5 @@
         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
         Add Cohort
     </a>
+    {% include 'management/pagination.html' %}
 {% endblock %}
