--- a/management/templates/management/add_cohort.html
+++ b/management/templates/management/add_cohort.html
@@ -1,7 +1,7 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <p class="bg-info">The first column in 'Members' field should be Student Uniquenames and the second column should be Advisor Uniquenames. Do not add headers.</p>
+    <p class="bg-info">The first column in 'Members' field should be Student Usernames and the second column should be Advisor Usernames. Do not add headers.</p>
     <p class="bg-info">Please add only 2 columns in 'Members' field seperated by one of the following delimiters:
         <mark>Tab</mark>
         |
