--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -1,11 +1,11 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <a class="btn btn-default" href="{% url 'management:cohort-list-download' %}">
+    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
         Download TLA_Cohort_USELAB
     </a>
-    <a class="btn btn-default" href="{% url 'management:cohort-detail-download' %}">
+    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
         Download TLA_StudentCohortMentor_USELAB
     </a>
