--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -3,11 +3,11 @@
 {% block management %}
     <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-        Download TLA_Cohort_USELAB
+        Download TLA_Cohort_USELAB.dat
     </a>
     <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-        Download TLA_StudentCohortMentor_USELAB
+        Download TLA_StudentCohortMentor_USELAB.dat
     </a>
     <hr/>
     <table class="table table-bordered">
