Remove Edit Cohort Functionality

--- a/management/templates/management/user_list.html
+++ b/management/templates/management/user_list.html
@@ -17,9 +17,9 @@
                     <td>{{ user.first_name }}</td>
                     <td>{{ user.last_name }}</td>
                     <td>
-                        <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">lookup</a>
+                        <a href="https://mcommunity.umich.edu/#profile:{{ user.username }}">Lookup</a>
                         |
-                        <a href="">deactivate</a>
+                        <a href="">Deactivate</a>
                     </td>
                 </tr>
                 {% empty %}
