--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -30,12 +30,7 @@
                     <td>{{ cohort.description }}</td>
                     <td>{{ cohort.group }}</td>
                     <td>
-                        <a href="{% url 'management:edit-cohort' cohort.code %}">
-                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                            Edit Cohort
-                        </a>
-                        |
-                        <a href="">deactivate</a>
+                        <a href="">Deactivate</a>
                     </td>
                 </tr>
                 {% empty %}
