--- a/management/templates/management/add_cohort.html
+++ b/management/templates/management/add_cohort.html
@@ -1,18 +1,24 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <p class="bg-info">The first column in 'Members' field should be Student Usernames and the second column should be Advisor Usernames. Do not add headers.</p>
-    <p class="bg-info">Please add only 2 columns in 'Members' field seperated by one of the following delimiters:
-        <mark>Tab</mark>
-        |
-        <mark>Comma</mark>
-        |
-        <mark>Space</mark>.
-        The delimiter used should be consistent across rows.
-    </p>
+    <button class="btn btn-info" data-toggle="collapse" data-target="#instructions">Click for Instructions</button>
+    <div id="instructions" class="collapse">
+        <p class="bg-info">The first column in 'Members' field should be Student Usernames and the second column should be Advisor Usernames. Do not add headers.</p>
+        <p class="bg-info">Please add only 2 columns in 'Members' field seperated by one of the following delimiters:
+            <mark>Tab</mark>
+            |
+            <mark>Comma</mark>
+            |
+            <mark>Space</mark>. The delimiter used should be consistent across rows.
+        </p>
+        <p class="bg-info">Please follow the same guidelines for a csv file. You can fill either the 'Members' text area
+            <mark>OR</mark>
+            upload a csv file.
+        </p>
+    </div>
     <hr/>
 
-    <form action="" method="post">{% csrf_token %}
+    <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
         {% for field in form %}
             <div class="form-group {% if field.errors %} has-error {% endif %}">
                 {{ field.errors }}
