Add download functionality through token

--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block management %}
-    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}">
+    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}?token={{ token }}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
         Download TLA_Cohort_USELAB.dat
     </a>
-    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}">
+    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}?token={{ token }}">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
         Download TLA_StudentCohortMentor_USELAB.dat
     </a>
