--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -7,15 +7,25 @@
         }
         .management h2 {
             padding: 0;
-            margin: 0 0 10px 0;
+            margin: 0 0 10px;
         }
+        .panel-default {
+            display: block;
+        }
+
     </style>
     <div class="container content">
-        <div class="well well-lg management">
-
-            <a href="{% url 'management:index' %}"><h2>Student Explorer Management</h2></a>
-
-            {% block management %}{% endblock %}
+        <div class="panel panel-default management">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <a href="{% url 'management:index' %}">
+                        Student Explorer Management
+                    </a>
+                </h3>
+            </div>
+            <div class="panel-body">
+                {% block management %}{% endblock %}
+            </div>
         </div>
     </div>
 {% endblock %}
