--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -17,7 +17,7 @@
     <hr/>
     <div class="checkbox">
         <label>
-            <input type="checkbox" value="" id="allCohorts">Show All Cohorts (Active + InActive)
+            <input type="checkbox" value="" id="allCohorts">Show All Cohorts (Active + Inactive)
         </label>
     </div>
     <div id="resultsTable" data-url="{% url 'management:cohort-list' %}">
