Convert AJAX to traditional POST
- Show Active/All Cohorts
- Activate/Deactivate/Delete functionality

--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -12,6 +12,13 @@
         .panel-default {
             display: block;
         }
+        .btn-group {
+            margin-bottom: 15px;
+        }
+        .btn-group button a:hover {
+            cursor: pointer;
+            cursor: hand;
+        }
 
     </style>
     <div class="container content">
