--- a/management/templates/management/pagination.html
+++ b/management/templates/management/pagination.html
@@ -3,7 +3,11 @@
         <ul class="pagination">
             {% if page_obj.has_previous %}
                 <li>
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                    {% if query_term %}
+                        <a class="page-link" href="?show={{ query_term }}&amp;page={{ page_obj.previous_page_number }}">&laquo;</a>
+                    {% else %}
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                    {% endif %}
                 </li>
             {% else %}
                 <li class="disabled">
@@ -19,13 +23,21 @@
                     </li>
                 {% else %}
                     <li>
-                        <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                        {% if query_term %}
+                            <a class="page-link" href="?show={{ query_term }}&amp;page={{ i }}">{{ i }}</a>
+                        {% else %}
+                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                        {% endif %}
                     </li>
                 {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
                 <li>
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+                    {% if query_term %}
+                        <a class="page-link" href="?show={{ query_term }}&amp;page={{ page_obj.next_page_number }}">&raquo;</a>
+                    {% else %}
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+                    {% endif %}
                 </li>
             {% else %}
                 <li class="disabled">
