Remove data-* attributes

--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -20,7 +20,7 @@
         </button>
     </div>
 
-    <div id="resultsTable" data-url="{% url 'management:cohort-list' %}">
+    <div id="resultsTable">
         <table class="table table-bordered">
             <thead>
                 <tr>
