Convert button group into links

--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -12,12 +12,8 @@
         .panel-default {
             display: block;
         }
-        .btn-group {
+        .show-links {
             margin-bottom: 15px;
-        }
-        .btn-group button a:hover {
-            cursor: pointer;
-            cursor: hand;
         }
 
     </style>
