--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -11,14 +11,17 @@
     </a>
     <hr/>
 
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default {% if show == 'all' %}active{% endif %}">
-            <a href="{% url 'management:cohort-list' %}?show=all">Show all cohorts</a>
-        </button>
-        <button type="button" class="btn btn-default {% if show == 'active' %}active{% endif %}">
-            <a href="{% url 'management:cohort-list' %}">Show only active cohorts</a>
-        </button>
-    </div>
+    {% if show == "active" %}
+        <a href="{% url 'management:cohort-list' %}?show=all" class="btn btn-info btn-sm show-links">
+            Show all cohorts
+        </a>
+    {% endif %}
+
+    {% if show == "all" %}
+        <a href="{% url 'management:cohort-list' %}" class="btn btn-info btn-sm show-links">
+            Show only active cohorts
+        </a>
+    {% endif %}
 
     <div id="resultsTable">
         <table class="table table-bordered">
